# financials

./: .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  entrypoint.sh
.github/workflows/: charts.yaml  container.yaml  test.yaml
api/: .gitignore  Makefile  config.yaml  go.mod  go.sum
api/cmd/: main.go
api/config/: config.go  types.go
api/context/: context.go
api/controller/: base_controller.go  base_controller_test.go  const.go  health.go  login.go  routes.go  trade.go  trade_transactions.go
api/mediators/: errors.go  login.go  login_test.go  trade.go  trade_test.go
api/migrations/: 000001_users.down.sql  000001_users.up.sql  000002_transactions.up.sql  (+1 more)
app/: Dockerfile  Makefile  README.md  config.yaml  entrypoint.sh  expenses.csv  go.mod  go.sum  income.csv  trades.csv
app/cmd/: main.go
financials/: Cargo.toml  Dockerfile  Makefile
financials/migrations/2022-01-31-085241_create_trades/: down.sql  up.sql
financials/migrations/2022-07-11-053002_create_expenditure/: down.sql  up.sql
financials/migrations/2022-12-04-103323_mortgage/: down.sql  up.sql
financials/migrations/2023-02-05-090113_shared-expense/: down.sql  up.sql
financials/sample/: assets.csv  expenses.csv  income.csv  shared_expenses.csv
financials/src/: alphavantage.rs  asset.rs  config.rs  expenditure.rs  input.rs  main.rs  models.rs  mortgage.rs  schema.rs  shared_expenditure.rs  stock.rs  telegram_data.rs  utils.rs
grafana/: Dockerfile  Makefile  README.md  financials.jsonnet  grafana.json  load.sh
nginx-dev/: Dockerfile  Makefile  nginx.conf
ui/: README.md  package.json
(+114 files in other folders)
