[package]
name = "financials"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
chronoutil = "0.2.3"
clap = { version = "3.0.13", features = ["derive"] }
csv = "1.1"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
diesel_migrations ="1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.14"
