[package]
name = "financials"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
chronoutil = "0.2.6"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.1"
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
diesel_migrations ="2.1.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
